# team-sync

./: .env.example  .gitignore  .mcp.json  ADOPTION.md  DEMO.md  DEPLOY.md  IDEAS.md  Makefile  POSITIONING.md  README.md  REMEDIATION-PLAN.md  SECURITY.md  SPECS.md  VS-COPILOT.md  bootstrap.py  config-google.yaml  config-workday-redesign-employee-expe.yaml  config.yaml  demo.py  demo_divergence_loop.py  figma_webhook_setup.py  mcp_server.py  pyproject.toml  requirements.txt  router.py  slack_bot.py  snapshot_scan.py  webhook_server.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: conflicts.md  journey.md  portfolio.md  whoowns.md
data/: project_registry.json  users-tyshaw-desktop-ai-initiatives-team-sync-config-health-snapshots.json
data/google-gen-ai/: experience_principles.yaml  journeys.yaml  org_objectives.yaml  trigger_config.yaml
data/synthetic/: experience_principles.yaml  journeys.yaml  org_objectives.yaml  outcomes.yaml  research_insights.yaml
docs/: TENANCY.md  atlassian-mcp.md  deployment-compliance.md  live-figma-ingestion-plan.md
scripts/: lint.py
skills/team-sync/: SKILL.md
slack/: manifest.json
src/: ingest.py  log.py  projects.py  skill_export.py
src/agent/: ai_enhance.py  alignment.py  audience.py  briefing.py  detector.py  digest.py  discovery.py  events.py  findability.py  freshness.py  fuzzy.py  health.py  instrumentation.py  manifest_health.py  meeting.py  membrane.py  plain.py  policy_loader.py  preferences.py  propose.py  provenance.py  scheduler.py  similarity.py  strategy.py  syncbot.py  tools.py
tests/: conftest.py  test_agent_path.py  test_ai_enhance.py  test_alignment.py  test_atlassian_mcp.py  test_builder.py  test_cli_main.py  test_dependency_graph.py  test_detector.py  test_digest.py  test_discovery.py  test_dispatch_membrane.py  test_events.py  test_figma_ingest.py  test_figma_live.py  test_findability.py  test_floor_signal.py  test_freshness.py  test_fuzzy.py  test_health.py  test_importers.py  test_ingest.py  test_live_atlassian.py  test_live_figma.py  test_manifest_health.py  test_meeting_and_briefing.py  test_membrane.py  test_notification_gate.py  test_onboarding.py  test_policy_activation.py  test_preferences.py  test_propose.py  test_propose_resolution.py  test_provenance.py  test_providers.py  test_router.py  test_router_health.py  test_router_proposals.py  test_schemas.py  test_similarity.py  (+7 more)
(+73 files in other folders)
