[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team-sync"
version = "0.1.0"
description = "Multi-team coordination agent — keeps design and dev teams in sync"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "slack-sdk>=3.27",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
syncbot = "team_sync.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/team_sync"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Intentional patterns in this codebase, not defects:
#   E402 — lazy / mid-module imports used to avoid circular imports
#   E701/E702 — compact one-line guards in the keyword handlers
# Everything else (unused imports/vars, ambiguous names, etc.) is enforced.
ignore = ["E402", "E701", "E702"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
# start lenient; tighten per-module over time
# Not yet wired into `make check`/CI — run `mypy src/` in a connected env,
# clear the findings, then add it to the gate.
